--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ media
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
+/static
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
@@ -160,3 +161,6 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# vscode local settings
+.vscode
